--- a/orators.html
+++ b/orators.html
@@ -103,45 +103,27 @@
 
         <div class="orator">
           <a class="orator-icon" id="clara-nao" onclick="orInfo()">
-            <img src='img/orators/Clara Não 2.jpg' onmouseover="this.src='img/orators/Clara Não 1.jpg';" onmouseout="this.src='img/orators/Clara Não 2.jpg';" />
+            <img id="clara-nao-img" src='img/orators/Clara Nao 2.jpg' onmouseover="this.src='img/orators/Clara Nao 1.jpg';" onmouseout="this.src='img/orators/Clara Nao 2.jpg';" />
             <p class="orName">Clara Não</p>
           </a>
         </div>
 
         <div class="orator">
-          <a class="orator-icon" id="arlindo-oliveira" onclick="orInfo()">
-            <img src='img/orators/Arlindo Oliveira 2.jpg' onmouseover="this.src='img/orators/Arlindo Oliveira 1.jpg';" onmouseout="this.src='img/orators/Arlindo Oliveira 2.jpg';" />
-            <p class="orName">Arlindo Oliveira</p>
-          </a>
-        </div>
-
-
-        <div class="orator">
           <a class="orator-icon" id="ana-costa" onclick="orInfo()">
-            <img src='img/orators/Ana Costa 2.jpg' onmouseover="this.src='img/orators/Ana Costa 1.jpg';" onmouseout="this.src='img/orators/Ana Costa 2.jpg';" />
+            <img id="ana-costa-img" src='img/orators/Ana Costa 2.jpg' onmouseover="this.src='img/orators/Ana Costa 1.jpg';" onmouseout="this.src='img/orators/Ana Costa 2.jpg';" />
             <p class="orName">Ana Filipa Costa</p>
           </a>
         </div>
 
-      </div>
-
-      <div class="orators-container">
-
         <div class="orator">
           <a class="orator-icon" id="carolina-pereira" onclick="orInfo()">
-            <img src='img/orators/Carolina Salgueiro Pereira 2.jpg' onmouseover="this.src='img/orators/Carolina Salgueiro Pereira.jpg';" onmouseout="this.src='img/orators/Carolina Salgueiro Pereira 2.jpg';" />
+            <img id="carolina-pereira-img" src='img/orators/Carolina Salgueiro Pereira 2.jpg' onmouseover="this.src='img/orators/Carolina Salgueiro Pereira.jpg';" onmouseout="this.src='img/orators/Carolina Salgueiro Pereira 2.jpg';" />
             <p class="orName">Carolina Salgueiro Pereira</p>
           </a>
         </div>
 
-        <div class="orator">
-          <a class="orator-icon" id="ze-magico" onclick="orInfo()">
-            <img src='img/orators/ZeMagico2.jpg' onmouseover="this.src='img/orators/ZeMagico.jpg';" onmouseout="this.src='img/orators/ZeMagico2.jpg';" />
-            <p class="orName">Zé Mágico</p>
-          </a>
-        </div>
-
       </div>
+
 
     </section>
 
