--- a/partners.html
+++ b/partners.html
@@ -109,8 +109,16 @@
       <h3 class="silver">BRONZE</h3>
       <a href="https://ufcoimbra.pt/" target="_blank"><img src="img/partners/unfreg.png" alt="logo" id="un-freg"></a>
 
-      <h3 class="tec">TECNOLÓGICOS</h3>
-      <a href="https://jeknowledge.pt/" target="_blank"><img src="img/partners/jek.png" alt="logo" id="jek"></a>
+      <h3>LOGÍSTICOS</h3>
+      <div class="log">
+        <a href="https://tmclub.eu/clubdata.php?c=560" target="_blank"><img src="img/partners/toast.jpg" alt="logo" id="toast"></a>
+        <a href="https://miguelabreuproducoes.wixsite.com/maproducoes" target="_blank"><img src="img/partners/ma.png" alt="logo" id="ma"></a>
+      </div>
+
+      <h3>TECNOLÓGICOS</h3>
+      <div class="tec">
+        <a href="https://jeknowledge.pt/" target="_blank"><img src="img/partners/jek.png" alt="logo" id="jek"></a>
+      </div>
 
     </section>
 
