--- a/tedtedx.html
+++ b/tedtedx.html
@@ -107,9 +107,9 @@
       </div>
       <div class="compare-container tedx aos-init aos-animate" data-aos="fade-left">
         <img src=" img/tedxb.png" id="logo-tedx">
-        <p>x = evento organizado de forma independente No espírito das ideias que vale a pena partilhar, TEDx é um programa de eventos locais e auto-organizados que reúnem pessoas para partilhar uma experiência semelhante ao TED. Num evento TEDx,
+        <p>No espírito das ideias que vale a pena partilhar, TEDx é um programa de eventos locais e auto-organizados que reúnem pessoas para partilhar uma experiência semelhante ao TED. Num evento TEDx,
           vídeos com TED Talks e oradores ao vivo são combinados para iniciar ligações e discussões profundas. Estes eventos auto-organizados são denominados TEDx, onde x = evento TED organizado de forma independente. A Conferência TED providencia
-          apoio geral ao programa TEDx mas os eventos TEDx são auto-organizados. (Sujeito a certas regras e regulamentos.)</p>
+          apoio geral ao programa TEDx mas os eventos TEDx são auto-organizados (Sujeito a certas regras e regulamentos.)</p>
       </div>
     </section>
 
