--- a/tedx19/team.html
+++ b/tedx19/team.html
@@ -96,7 +96,7 @@
         <h2>ORADORES</h2>
       </div>
       <div class="member_4 member2">
-        <img src="img/joão_sequeira.jpg" width="150" height="150">
+        <img src="img/joao_sequeira.jpg" width="150" height="150">
         <h2>JOÃO SEQUEIRA</h2>
         <h3>FMUC</h3>
         <h2>LOGÍSTICA</h2>
@@ -168,7 +168,7 @@
         <h2>LOGÍSTICA</h2>
       </div>
       <div class="member_4 member3">
-        <img src="img/joão_figueiredo.jpg" width="150" height="150">
+        <img src="img/joao_figueiredo.jpg" width="150" height="150">
         <h2>JOÃO FIGUEIREDO</h2>
         <h3>FMUC</h3>
         <h2>LOGÍSTICA</h2>
