--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
     <section id="news">
       <div class="container_news">
 
-        <!-- <div class="new">
-          <div class="news_text">
+        <div class="new">
+          <!-- <div class="news_text">
             <p></p>
-          </div>
+          </div> -->
           <img class="mySlides" src="img/news/new1.png" style="width:100%">
-        </div> -->
+        </div>
 
         <!-- <div class="new">
           <div class="news_text">
