--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <!-- meta-tags -->
   <meta charset="utf-8">
+  <meta name="google-site-verification" content="KBM2G7A_49CHTiwW8x58o5yZ2LPFLiZqyhNk-TMhmh8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="user-scalable=no, initial-scale=1, height=device-height" />
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -129,7 +130,7 @@
           <!-- <div class="news_text">
             <p></p>
           </div> -->
-          <img class="mySlides" src="img/news/new1.png" style="width:100%">
+          <img class="mySlides" src="img/news/new1.jpg" style="width:100%">
         </div>
 
         <!-- <div class="new">
