--- a/tedx19/vieworators.html
+++ b/tedx19/vieworators.html
@@ -142,7 +142,7 @@
 
 
       <div class="foto">
-        <a href="#orador_5" class="orador_5open"><img width="250" height="250" src='img/batistaW.png' onmouseover="this.src='img/batista.png';" onmouseout="this.src='img/batistaW.png';" /></a>
+        <a href="#orador_5" class="orador_5open"><img width="250" height="250" src='img/batistaw.png' onmouseover="this.src='img/batista.png';" onmouseout="this.src='img/batistaw.png';" /></a>
         <p class="nome">André Batista</p>
       </div>
       <div class="orador_5" id="orador_5">
