--- a/orators.html
+++ b/orators.html
@@ -4,22 +4,25 @@
 <head>
   <!-- meta-tags -->
   <meta charset="utf-8">
+  <meta name="google-site-verification" content="KBM2G7A_49CHTiwW8x58o5yZ2LPFLiZqyhNk-TMhmh8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="user-scalable=no, initial-scale=1, height=device-height" />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="robots" content="noydir, noodp">
-  <meta name="description"
-    content="O mundo está a mudar e o TEDxUniversidadedeCoimbra não ficou indiferente! Durante os dias 22, 23, 24, 25 e 26 de maio, a partir das 21:00h, reserva já o lugar mais confortável da tua casa e prepara-te para assistir ao primeiro evento TEDx em direto em Portugal no conforto do teu lar.">
+  <meta name="description" content="O mundo está a mudar e o TEDxUniversidadedeCoimbra não ficou indiferente! Durante os dias 22, 23, 24, 25 e 26 de maio, a partir das 21:00h, reserva já o lugar mais confortável da tua casa e prepara-te para assistir ao primeiro evento TEDx em direto em Portugal no conforto do teu lar.">
   <meta name="keywords" content="tedx, tedx coimbra, tedx universidade de coimbra, palestras tedx, tedx metamorfose, tedx live, talks, palestras, maio, jeKnowledge, nemaac, oradores, ted, uc">
   <meta name="author" content="Diogo Ribeiro">
-  <meta property="og:image" content="img/background2.jpg" />
+  <meta property="og:image" content="img/background2.jpg">
   <meta property="og:title" content="TEDxUniversidadedeCoimbra" />
-  <meta property="og:description"
-    content="O mundo está a mudar e o TEDxUniversidadedeCoimbra não ficou indiferente! Durante os dias 22, 23, 24, 25 e 26 de maio, a partir das 21:00h, reserva já o lugar mais confortável da tua casa e prepara-te para assistir ao primeiro evento TEDx em direto em Portugal no conforto do teu lar.">
+  <meta property="og:description" content="O mundo está a mudar e o TEDxUniversidadedeCoimbra não ficou indiferente! Durante os dias 22, 23, 24, 25 e 26 de maio, a partir das 21:00h, reserva já o lugar mais confortável da tua casa e prepara-te para assistir ao primeiro evento TEDx em direto em Portugal no conforto do teu lar.">
   <meta property="og:url" content="https://tedxuniversidadedecoimbra.pt" />
   <meta property="og:type" content="website" />
   <link rel="canonical" href="https://www.tedxuniversidadedecoimbra.pt">
+  <meta name="twitter:title" content="TEDxUniversidadedeCoimbra">
+  <meta name="twitter:description" content="O mundo está a mudar e o TEDxUniversidadedeCoimbra não ficou indiferente! Durante os dias 22, 23, 24, 25 e 26 de maio, a partir das 21:00h, reserva já o lugar mais confortável da tua casa e prepara-te para assistir ao primeiro evento TEDx em direto em Portugal no conforto do teu lar.">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="img/background2.jpg">
   <!-- favicon -->
   <link rel="icon" type="image/png" href="img/fav/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="img/fav/favicon-16x16.png" sizes="16x16" />
@@ -119,6 +122,33 @@
           <a class="orator-icon" id="carolina-pereira" onclick="orInfo()">
             <img id="carolina-pereira-img" src='img/orators/Carolina Salgueiro Pereira 2.jpg' onmouseover="this.src='img/orators/Carolina Salgueiro Pereira.jpg';" onmouseout="this.src='img/orators/Carolina Salgueiro Pereira 2.jpg';" />
             <p class="orName">Carolina Salgueiro Pereira</p>
+          </a>
+        </div>
+
+      </div>
+
+
+
+      <div class="orators-container">
+
+        <div class="orator">
+          <a class="orator-icon" id="eduardo-jorge" onclick="orInfo()">
+            <img id="eduardo-jorge-img" src='img/orators/Eduardo2.jpg' onmouseover="this.src='img/orators/Eduardo1.jpg';" onmouseout="this.src='img/orators/Eduardo2.jpg';" />
+            <p class="orName">Eduardo Jorge</p>
+          </a>
+        </div>
+
+        <div class="orator">
+          <a class="orator-icon" id="fatima-castro" onclick="orInfo()">
+            <img id="fatima-castro-img" src='img/orators/Fatima2.jpg' onmouseover="this.src='img/orators/Fatima1.jpg';" onmouseout="this.src='img/orators/Fatima2.jpg';" />
+            <p class="orName">Fátima Velez de Castro</p>
+          </a>
+        </div>
+
+        <div class="orator">
+          <a class="orator-icon" id="goulds" onclick="orInfo()">
+            <img id="goulds-img" src='img/orators/Goulds2.jpg' onmouseover="this.src='img/orators/Goulds1.jpg';" onmouseout="this.src='img/orators/Goulds2.jpg';" />
+            <p class="orName">Goulds</p>
           </a>
         </div>
 
