--- a/partners.html
+++ b/partners.html
@@ -13,7 +13,7 @@
   <meta name="description" content="O mundo está a mudar e o TEDxUniversidadedeCoimbra não ficou indiferente! Durante os dias 22, 23, 24, 25 e 26 de maio, a partir das 21:00h, reserva já o lugar mais confortável da tua casa e prepara-te para assistir ao primeiro evento TEDx em direto em Portugal no conforto do teu lar.">
   <meta name="keywords" content="tedx, tedx coimbra, tedx universidade de coimbra, palestras tedx, tedx metamorfose, tedx live, talks, palestras, maio, jeKnowledge, nemaac, oradores, ted, uc">
   <meta name="author" content="Diogo Ribeiro">
-  <meta property="og:image" content="img/background2.jpg">
+  <meta property="og:image" content="https://www.tedxuniversidadedecoimbra.pt/img/background2.jpg">
   <meta property="og:title" content="TEDxUniversidadedeCoimbra" />
   <meta property="og:description" content="O mundo está a mudar e o TEDxUniversidadedeCoimbra não ficou indiferente! Durante os dias 22, 23, 24, 25 e 26 de maio, a partir das 21:00h, reserva já o lugar mais confortável da tua casa e prepara-te para assistir ao primeiro evento TEDx em direto em Portugal no conforto do teu lar.">
   <meta property="og:url" content="https://tedxuniversidadedecoimbra.pt" />
@@ -22,7 +22,7 @@
   <meta name="twitter:title" content="TEDxUniversidadedeCoimbra">
   <meta name="twitter:description" content="O mundo está a mudar e o TEDxUniversidadedeCoimbra não ficou indiferente! Durante os dias 22, 23, 24, 25 e 26 de maio, a partir das 21:00h, reserva já o lugar mais confortável da tua casa e prepara-te para assistir ao primeiro evento TEDx em direto em Portugal no conforto do teu lar.">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="img/background2.jpg">
+  <meta name="twitter:image" content="https://www.tedxuniversidadedecoimbra.pt/img/background2.jpg">
   <!-- favicon -->
   <link rel="icon" type="image/png" href="img/fav/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="img/fav/favicon-16x16.png" sizes="16x16" />
