--- a/orators.html
+++ b/orators.html
@@ -204,6 +204,14 @@
           </a>
         </div>
 
+        <div class="orator">
+          <a class="orator-icon" id="gustavof" onclick="orInfo()">
+            <img id="gustavof-img" src='img/orators/GustavoF2.jpg' onmouseover="this.src='img/orators/GustavoF1.jpg';" onmouseout="this.src='img/orators/GustavoF2.jpg';" />
+            <p class="orName">Gustavo Freitas</p>
+          </a>
+        </div>
+
+
       </div>
 
 
