--- a/anemia.html
+++ b/anemia.html
@@ -32,7 +32,7 @@
   <link rel="icon" type="image/png" href="img/fav/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="img/fav/favicon-16x16.png" sizes="16x16" />
   <link rel="stylesheet" href="css/geral.css">
-  <link rel="stylesheet" href="css/error.css">
+  <link rel="stylesheet" href="css/anemia.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
   <script src="js/navbar.js"></script>
@@ -79,16 +79,24 @@
           <li><a target="_blank" href="tedx19/index.html">EDIÇÃO ANTERIOR</a></li>
         </ul>
       </div>
-      <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+      <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
       <script src="js/hamburguer.js"></script>
     </section>
   </header>
 
   <main>
-    <section id="error">
-      <div class="error-info">
-        <h1>Brevemente Disponível</h1>
-        <a href="index.html">voltar</a>
+    <section id="anemia-home">
+      <div class="doc1" id="doc">
+        <object data="img/anemia.pdf#toolbar=0&navpanes=0&scrollbar=0&zoom=100" width="100%" height="100%"></object>
+      </div>
+      <div class="doc2" id="doc">
+        <object data="img/anemia.pdf#toolbar=0&navpanes=0&scrollbar=0&zoom=40" width="100%" height="100%"></object>
+      </div>
+    </section>
+
+    <section id="anemia-mobile">
+      <div class="download-anemia">
+        <a target="_blank" href="img/anemia.pdf" download>Transferir</a>
       </div>
     </section>
   </main>
