--- a/tedtedx.html
+++ b/tedtedx.html
@@ -79,7 +79,7 @@
           <li><a target="_blank" href="tedx19/index.html">EDIÇÃO ANTERIOR</a></li>
         </ul>
       </div>
-      <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+      <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
       <script src="js/hamburguer.js"></script>
     </section>
   </header>
