Updated anemia, program and partners

--- a/partners.html
+++ b/partners.html
@@ -108,6 +108,7 @@
       <h3>PARCEIROS INSTITUCIONAIS</h3>
       <div class="inst">
         <a href="https://www.uc.pt/" target="_blank"><img src="img/partners/uc.png" alt="logo" id="uc"></a>
+        <a href="https://www.instagram.com/aacoficial/" target="_blank"><img src="img/partners/aac.png" alt="logo" id="aac"></a>
         <a href="https://www.cm-coimbra.pt/" target="_blank"><img src="img/partners/cmc.svg" alt="logo" id="cmc"></a>
       </div>
 
@@ -119,6 +120,7 @@
 
       <h3>LOGÍSTICOS</h3>
       <div class="log">
+        <a href="https://www.youtube.com/user/tvAAC" target="_blank"><img src="img/partners/tvaac.png" alt="logo" id="ma"></a>
         <a href="https://tmclub.eu/clubdata.php?c=560" target="_blank"><img src="img/partners/toast.jpg" alt="logo" id="toast"></a>
         <a href="https://miguelabreuproducoes.wixsite.com/maproducoes" target="_blank"><img src="img/partners/ma.png" alt="logo" id="ma"></a>
       </div>
