--- a/index.html
+++ b/index.html
@@ -90,8 +90,15 @@
   <main>
 
     <section id="home">
-      <img src="img/title.svg" alt="title">
-      <img src="img/direto.png" alt="direto">
+      <div class="home">
+        <img src="img/title.svg" alt="title">
+        <img src="img/direto.png" alt="direto">
+      </div>
+      <!-- <div class="stream">
+        <div class="video">
+          <iframe src="https://www.youtube.com/embed/xr_3yubX5Hc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div> -->
     </section>
 
     <section id="about">
@@ -117,7 +124,7 @@
       <div class="social-container">
         <div class="social-net">
           <a target="_blank" href="https://www.instagram.com/tedxuniversidadedecoimbra/"><img src="img/ig.svg" alt=""></a>
-          <p>+1800 Seguidores</p>
+          <p>+1900 Seguidores</p>
         </div>
         <div class="social-net">
           <a target="_blank" href="https://www.facebook.com/tedxuniversidadedecoimbra/"><img src="img/fb.svg" alt=""></a>
