--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </div>
       <div class="stream">
         <div class="video">
-          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Ftedxuniversidadedecoimbra%2Fvideos%2F575613600040434%2F&show_text=0&width=560" width="1920" height="1080" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true" data-autoplay="true"></iframe>
+          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Ftedxuniversidadedecoimbra%2Fvideos%2F871028266725775%2F&width=0" width="1920" height="1080" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true" data-autoplay="true"></iframe>
         </div>
       </div>
     </section>
